# gers-platform

./: .gitignore  Cargo.toml  LICENCE  Makefile.toml  README.md
gers_api/: Cargo.toml  README.md
gers_api/src/: bump.rs  cmd.rs  hooks.rs  lib.rs
gers_app/: Cargo.toml
gers_app/src/: app.rs  env.rs  error.rs  ext.rs  fps.rs  main.rs  wasm_api.rs  wasm_impl.rs
gers_core/: Cargo.toml  Makefile.toml  README.md
gers_core/src/: lib.rs
gers_events/: Cargo.toml
gers_events/src/: lib.rs
gers_plugins/: Cargo.toml
gers_plugins/src/: builtins.rs  env.rs  errors.rs  lib.rs  meta.rs
gers_plugins/test/: main.wat  plugin.toml
plugins/core/: README.md  main.wat  plugin.toml
