[package]
name = "gers_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gers"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
slog-async = "2.5"
slog-scope = "4.3"
slog-stdlog = "4.1"
slog-term = "2.6"
wasmer = "2.0"

[dependencies.gers_plugins]
version = "*"
path = "../gers_plugins"

[dependencies.slog]
version = "2.7"
features = ["max_level_trace", "release_max_level_warn"]

[dependencies.winit]
version = "0.25"
features = ["serde"]
