[package]
name = "gers_plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1.0"
slog = "2.7"
thiserror = "1.0"
toml = "0.5"
wasmer-engine-universal = "2.0"
wasmer-compiler-cranelift = "2.0"
wasmer-compiler-singlepass = "2.0"

[dependencies.wasmer]
version = "2.0"
features = ["cranelift"]
